gpg2 --list-keys --with-colons > /dev/full exits with status 0. This makes it impossible for the caller to know if they actually received all of the output from GnuPG, or if the output was corrupted due to a transient ENOMEM or similar.
Description
Description
Revisions and Commits
Revisions and Commits
| rG GnuPG | |||
| rG18081e2ecf43 gpgsm: Terminate key listing on output write error. | |||
| rGb36e557c5b05 gpg: Terminate key listing on output write error. | |||
Related Objects
Related Objects
- Mentioned In
- T7289: Release GnuPG 2.5.2
Event Timeline
Comment Actions
The more relavant error is that there is no status output on failure which is what gpgme uses (due to double forking).
However, in real life stdout is connected to a pipe and thus won't be hit by an ENOSPC.
Comment Actions
I note that @DemiMarie offered a patch for this over a year ago. It doesn't appear to have had any review. If it's good, maybe apply it? If it's problematic, can we identify the problem?