g10/import.c
@@ -2175,10 +2175,12 @@ import_one_real (ctrl_t ctrl,
       merge_keys_done = 1;
       /* Note that we do not want to show the validity because the key
        * has not yet imported.  */
-      list_keyblock_direct (ctrl, keyblock, from_sk, 0,
+      err = list_keyblock_direct (ctrl, keyblock, from_sk, 0,
                             opt.fingerprint || opt.with_fingerprint, 1);
       es_fflush (es_stdout);
       no_usable_encr_subkeys_warning (keyblock);
+      if (err)
+        goto leave;
     }
 
   /* Write the keyblock to the output and do not actually import.  */
